Fixes the alignment of the foley markers

--- a/webplayer/style.css
+++ b/webplayer/style.css
@@ -9,6 +9,9 @@
 .cue.selected {
   border-color: #66aa66;
 }
+.cue-progress-container {
+  position: relative;
+}
 .cue-progress {
   border: none;
   background-color: #33cc66;
@@ -20,7 +23,7 @@
   height: 3px;
   width: 2px;
   display: inline-block;
-  position: relative;
+  position: absolute;
 }
 @keyframes cue-progress {
   from {
